# KDE-Usability-Inspector

./: .gitignore  CMakeLists.txt  KUI_project.cpp  KUI_project.h  KUI_record.cpp  KUI_record.h  KUI_select.cpp  KUI_select.h  main.cpp
src/: CMakeLists.txt  KUI_CameraWidget.cpp  KUI_CameraWidget.h  KUI_KuiCcentralWidget.cpp  KUI_KuiCentralWidget.cpp  KUI_KuiCentralWidget.h  KUI_MainToolBar.cpp  KUI_MainToolBar.h  KUI_NewProject.cpp  KUI_NewProject.h  KUI_NewProjectDialog.cpp  KUI_NewProjectDialog.h  KUI_NewProjectSettings.cpp  KUI_NewProjectSettings.h  KUI_ScreenShotLabel.cpp  KUI_ScreenShotLabel.h  KUI_Settings.h  KUI_cameraWidget.cpp  KUI_cameraWidget.h  KUI_mainToolBar.cpp  KUI_mainToolBar.h  KUI_project.cpp  KUI_project.h  KUI_record.cpp  KUI_record.h  KUI_screenShotLabel.cpp  KUI_screenShotLabel.h  domitem.cpp  dommodel.cpp  main.cpp
src/model/: domitem.cpp  domitem.h  dommodel.cpp  dommodel.h
